--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ Dharwad, Karnataka, India - 580011
 </p>
     </div>
     <div class="col-sm-4">
-      <p><a href="https://in.linkedin.com/in/sai-anuroop-kesanapalli-98047216b">><span class="fa fa-linkedin-square fa-lg"></span></a></p>
+      <p><a href="https://in.linkedin.com/in/sai-anuroop-kesanapalli-98047216b"><span class="fa fa-linkedin-square fa-lg"></span></a></p>
     </div>
   </div>
 </div>
