--- a/index.html
+++ b/index.html
@@ -176,6 +176,9 @@ Dharwad, Karnataka, India - 580011
     <div class="col-sm-4">
       <p><a href="https://in.linkedin.com/in/sai-anuroop-kesanapalli-98047216b"><span class="fa fa-linkedin-square fa-lg"></span></a></p>
     </div>
+    <div class="col-sm-4">
+      <p><a href="https://www.instagram.com/saianuroopkesanapalli"><span class="fa fa-instagram fa-lg"></span></a></p>
+    </div>
   </div>
 </div>
 <!-- Footer -->
