--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@ Dharwad, Karnataka, India - 580011
     <div class="col-sm-4">
       <p><a href="https://www.instagram.com/saianuroopkesanapalli"><span class="fa fa-instagram fa-lg"></span></a></p>
     </div>
-    <div class="col-sm-4">
+<!--     <div class="col-sm-4">
       <p><a href="https://www.facebook.com/saianuroop.kesanapalli.9"><span class="fa fa-facebook-square fa-lg"></span></a></p>
-    </div>
+    </div> -->
   </div>
 </div>
 <!-- Footer -->
