--- a/my_activities.html
+++ b/my_activities.html
@@ -217,6 +217,16 @@ Dharwad, Karnataka, India - 580011
 
 </p>
     </div>
+    </div>
+    <div class="col-sm-4">
+      <p><a href="https://in.linkedin.com/in/sai-anuroop-kesanapalli-98047216b"><span class="fa fa-linkedin-square fa-lg"></span></a></p>
+    </div>
+    <div class="col-sm-4">
+      <p><a href="https://www.instagram.com/saianuroopkesanapalli"><span class="fa fa-instagram fa-lg"></span></a></p>
+    </div>
+<!--     <div class="col-sm-4">
+      <p><a href="https://www.facebook.com/saianuroop.kesanapalli.9"><span class="fa fa-facebook-square fa-lg"></span></a></p>
+    </div> -->
   </div>
 </div>
 
