--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <!-- Second Container -->
 <div class="container-fluid bg-3 text-center">
   <h3 class="margin">About</h3>
-  <p>I am pursuing B.Tech in Computer Science Engineering at <a href="https://www.iitdh.ac.in">IIT Dharwad</a>, currently in 6th semester.    
+  <p>I am pursuing B.Tech in Computer Science and Engineering at <a href="https://www.iitdh.ac.in">IIT Dharwad</a>, currently in 6th semester.    
 </div>
 <hr>
 <div class="container-fluid bg-3 text-center">
